--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://jaydeepgedam.github.io/LLM_Studio",
   "name": "latestui",
   "private": true,
   "version": "0.0.0",
